--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');  
+        html,body{
+            font-family: 'Open Sans', sans-serif;
+        }  
+    </style>
 </head>
 <body>
     <div id="root">
