--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sales</title>
+    <link rel="icon" type="image/x-icon" href="../public//favicon//favicon.ico">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap');  
         html,body{
